<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="match_parent" 
	android:layout_height="match_parent">
	<TextView  android:id="@+id/tvInfo"
		android:background="#FFAAFF"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:layout_marginTop="10dp"
	    android:textSize="16sp"
	    android:textColor="#000000"
	    android:text="@string/info" />
	
	<TableRow
		android:background="#FFFFAA" 
		android:layout_marginTop="10dp">
		<Button android:id="@+id/btnRecord"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="#FF0000"
			android:text="@string/record" />
			
		<Button android:id="@+id/btnStopRecord"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/stopRecord" />	
	</TableRow>
	<TableRow
		android:background="#AAFFFF" 
		android:layout_marginTop="10dp">
		<Button android:id="@+id/btnPlay"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/play" />
			
		<Button android:id="@+id/btnStopPlay"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:text="@string/stopPlay" />
	</TableRow>
</TableLayout>